# BXC_VideoAnalyzer_v2

./: README.md  分享一个视频行为分析系统_v2.docx  视频行为分析.drawio
Admin_v2/: README.md
Admin_v2/app/utils/: ZLMediaKit.py
Admin_v2/framework/: settings.py
Algorithm_v2/: Algorithm.py  AlgorithmApiServer.py  README.md  test_AlgorithmApiServer_video.py
Analyzer_v2/: Linux构建和运行指南.md  build_and_run_linux.sh  模块说明文档.md
Analyzer_v2/Analyzer_v2/: CMakeLists.txt
Analyzer_v2/Analyzer_v2/Core/: Analyzer.cpp  AvPullStream.cpp  AvPushStream.cpp  GenerateAlarm.h  GenerateVideo.cpp
